k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-service
  namespace: default
spec:
  selector:
    app: demo-api
  ports:
  - port: 80
    targetPort: 3000
